@@ -1,3 +1,7 @@
+2006-07-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* Added creation of default configuration file if missing.
+	* There may still be issues with config file creation for movpy, py2exe and similar systems.
+
 2006-07-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Added AnsiState class to simplify work with getting the aansi color handling to work properly
 	* Added NOP function to readline class to have an empty function to bind to tab completion
